Dependency update, overall cleanup